Edited font size in invoice_payment_index template of service_admin templates

--- a/app/templates/service_admin/invoice_payment_index.html
+++ b/app/templates/service_admin/invoice_payment_index.html
@@ -13,6 +13,9 @@
         #toast-container.toast-top-full-width > .toast {
             width: 100% !important;
         }
+        #invoices {
+            font-size: 0.95rem;
+        }
     </style>
 {% endblock %}
 {% block page_content %}
