--- a/app/templates/academic_services/partials/bacteria_request_condition_form.html
+++ b/app/templates/academic_services/partials/bacteria_request_condition_form.html
@@ -14,7 +14,7 @@
                                     {% if _field.type != 'CSRFTokenField' %}
                                         <th style="border: none">
                                             {{ _field.label.text }}
-                                            {% if _field.type != 'IntegerField' %}
+                                            {% if _field.label.text != 'อัตราส่วนเจือจางผลิตภัณฑ์' and _field.label.text != 'ต่อน้ำ' %}
                                                 <span class="has-text-danger">*</span>
                                             {% endif %}
                                         </th>
@@ -77,17 +77,15 @@
 
             table.find('tbody tr').each(function () {
                 const checkbox = $(this).find('input[type="checkbox"]');
-                const numInputs = $(this).find('input[type="number"]');
                 const textInputs = $(this).find('input[type="text"]');
+                console.log('t', textInputs)
 
                 const active = checkbox.is(':checked');
-                numInputs.prop('readonly', !active);
                 textInputs.prop('readonly', !active).prop('required', active)
                     .attr('oninvalid', "this.setCustomValidity('กรุณากรอกข้อมูล')")
                     .attr('oninput', "this.setCustomValidity('')");
 
                 if (!active) {
-                    numInputs.val('');
                     textInputs.val('');
                 }
             });
