--- a/app/templates/academic_services/partials/bacteria_request_condition_form.html
+++ b/app/templates/academic_services/partials/bacteria_request_condition_form.html
@@ -78,16 +78,33 @@
             table.find('tbody tr').each(function () {
                 const checkbox = $(this).find('input[type="checkbox"]');
                 const textInputs = $(this).find('input[type="text"]');
-                console.log('t', textInputs)
 
                 const active = checkbox.is(':checked');
-                textInputs.prop('readonly', !active).prop('required', active)
-                    .attr('oninvalid', "this.setCustomValidity('กรุณากรอกข้อมูล')")
-                    .attr('oninput', "this.setCustomValidity('')");
+                textInputs.each(function () {
+                    const name = $(this).attr('name');
+                    const isOptional = name.endsWith('ratio') || name.endsWith('per_water');
+                    $(this).prop('readonly', !active);
 
-                if (!active) {
-                    textInputs.val('');
-                }
+                    if (active && !isOptional) {
+                        $(this)
+                            .prop('required', true)
+                            .attr('oninvalid', "this.setCustomValidity('กรุณากรอกข้อมูล')")
+                            .attr('oninput', "this.setCustomValidity('')");
+                    } else {
+                        $(this).prop('required', false);
+                        this.setCustomValidity('');
+                    }
+
+                    if (!active) {
+                        $(this).val('');
+                    }
+                })
+                {#textInputs.prop('readonly', !active).prop('required', active)#}
+                {#    .attr('oninvalid', "this.setCustomValidity('กรุณากรอกข้อมูล')")#}
+                {#    .attr('oninput', "this.setCustomValidity('')");#}
+                {##}
+                {#if (!active) {#}
+                {#    textInputs.val('');#}
             });
         }
 
