--- a/app/templates/academic_services/view_request.html
+++ b/app/templates/academic_services/view_request.html
@@ -20,7 +20,7 @@
         <nav class="breadcrumb" aria-label="breadcrumbs">
             <ul>
                 <li>
-                    <a href="{{ url_for('academic_services.request_index', menu=menu) }}">
+                    <a href="{{ url_for('academic_services.request_index', menu='request') }}">
                     <span class="icon is-small">
                         <i class="fas fa-home" aria-hidden="true"></i>
                     </span>
