--- a/app/templates/service_admin/invoice_index.html
+++ b/app/templates/service_admin/invoice_index.html
@@ -81,9 +81,10 @@
                     <th>วัน-เวลาที่ออก</th>
                     <th>ออกในนาม</th>
                     <th>ผู้ประสานงาน</th>
-                    <th>ราคา</th>
+                    <th>ยอดเรียกเก็บ</th>
                     <th>วิธีการชำระเงิน</th>
                     <th>วันที่ชำระเงิน</th>
+                    <th>ยอดที่ชำระ</th>
                     <th>หลักฐานการชำระเงิน</th>
                     <th>ผู้ออก</th>
                     <th>สถานะ</th>
@@ -146,6 +147,16 @@
                             if (data !== null) {
                                 let d = moment(data)
                                 return d.format('lll')
+                            } else {
+                                return ''
+                            }
+                        }
+                    },
+                    {
+                        data: 'amount_paid',
+                        render: function (data) {
+                            if (data != null) {
+                                return data
                             } else {
                                 return ''
                             }
