--- a/app/templates/service_admin/invoice_index_for_central_admin.html
+++ b/app/templates/service_admin/invoice_index_for_central_admin.html
@@ -84,10 +84,11 @@
                     <th>วัน-เวลาที่ออก</th>
                     <th>ออกในนาม</th>
                     <th>ผู้ประสานงาน</th>
-                    <th>ราคา</th>
+                    <th>ยอดเรียกเก็บ</th>
                     <th>ไฟล์ใบแจ้งหนี้</th>
                     <th>วิธีการชำระเงิน</th>
                     <th>วันที่ชำระเงิน</th>
+                    <th>ยอดที่ชำระ</th>
                     <th>หลักฐานการชำระเงิน</th>
                     <th>ผู้ออก</th>
                     <th>สถานะ</th>
@@ -183,6 +184,16 @@
                             if (data !== null) {
                                 let d = moment(data)
                                 return d.format('lll')
+                            } else {
+                                return ''
+                            }
+                        }
+                    },
+                    {
+                        data: 'amount_paid',
+                        render: function (data) {
+                            if (data != null) {
+                                return data
                             } else {
                                 return ''
                             }
