fixed conflicts between merges

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -301,11 +301,6 @@
                 <nav class="panel is-info">
                     <p class="panel-heading">Services</p>
                     <a href="{{ url_for('comhealth.landing') }}" class="panel-block">
-                        </a>
-                    </nav>
-                    <nav class="panel is-info">
-                        <p class="panel-heading">Services</p>
-                        <a href="{{ url_for('comhealth.landing') }}" class="panel-block">
                         <span class="panel-icon">
                             <i class="fas fa-heartbeat"></i>
                         </span>
@@ -330,12 +325,10 @@
                             <i class="far fa-calendar-alt"></i>
                         </span>
                         <span class="is-size-5">
-                            ระบบลงทะเบียนใช้งาน Smart Classroom และ Online Learning
+                            ระบบลงทะเบียนใช้งาน Zoom
                         </span>
                     </a>
                     <a href="{{ url_for('vehicle.index') }}" class="panel-block">
-                        </a>
-                        <a href="{{ url_for('vehicle.index') }}" class="panel-block">
                         <span class="panel-icon">
                             <i class="fas fa-car"></i>
                         </span>
@@ -351,20 +344,11 @@
                     <!--                            ป้อนข้อมูลการเดินทาง (สำหรับพขร.)-->
                     <!--                        </span>-->
                     <!--                    </a>-->
-                    {# <a href="http://10.4.101.32/Repair/StatusList.aspx" class="panel-block">#}
-                        {# <span class="panel-icon">#}
-                            {# <i class="fas fa-cogs"></i>#}
-                            {# </span>#}
-                        {# <span class="is-size-5">#}
-                            {# ระบบซ่อมบำรุงและครุภัณฑ์ (Intranet only)#}
-                            {# </span>#}
-                        {# </a>#}
                     <a href="{{ url_for('procurement.main_procurement_page') }}" class="panel-block">
                         <span class="panel-icon">
                             <i class="fas fa-cog"></i>
                         </span>
                         <span class="is-size-5">ระบบงานคลังและพัสดุ</span>
-                        <span class="tag is-rounded is-success">New</span>
                     </a>
                     <a href="{{ url_for('comp_tracker.index') }}" class="panel-block">
                         <span class="panel-icon">
@@ -373,78 +357,25 @@
                         <span class="is-size-5">ระบบรับแจ้งและติดตามข้อร้องเรียนและปัญหา</span>
                     </a>
                 </nav>
-                <nav class="panel is-danger">
-                    <p class="panel-heading">Services (กำลังพัฒนาและทดลอง)</p>
-                    <a href="{{ url_for('continuing_edu_admin.dashboard') }}" class="panel-block">
-                        <span class="panel-icon">
-                            <i class="fa fa-exclamation-triangle has-text-warning"></i>
-                        </span>
-                        <span class="is-size-5">จัดการคอร์สอบรม</span>
+                <nav class="panel is-info">
+                    <p class="panel-heading">Analytics</p>
+                    <a class="panel-block"
+                        href="{{ url_for('data_bp.orgs') }}">
+                    <span class="panel-icon">
+                        <i class="fas fa-tasks"></i>
+                    </span>
+                    <span class="is-size-5">
+                        ระบบฐานข้อมูลตัวชี้วัดและกระบวนการการทำงาน
+                    </span>
                     </a>
-                    <a href="{{ url_for('service_admin.index') }}" class="panel-block">
-                        <span class="panel-icon">
-                            <i class="fa fa-exclamation-triangle has-text-warning"></i>
-                        </span>
-                        <span class="is-size-5">ระบบงานบริการวิชาการ</span>
-                    </a>
-                    <a href="{{ url_for('meeting_planner.index') }}" class="panel-block">
-                        </a>
-                        <!--                    <a href="{{ url_for('vehicle.trip') }}" class="panel-block">-->
-                        <!--                        <span class="panel-icon">-->
-                        <!--                            <i class="fas fa-car"></i>-->
-                        <!--                        </span>-->
-                        <!--                        <span class="is-size-5">-->
-                        <!--                            ป้อนข้อมูลการเดินทาง (สำหรับพขร.)-->
-                        <!--                        </span>-->
-                        <!--                    </a>-->
-{#                        <a href="http://10.4.101.32/Repair/StatusList.aspx" class="panel-block">#}
-{#                        <span class="panel-icon">#}
-{#                            <i class="fas fa-cogs"></i>#}
-{#                        </span>#}
-{#                            <span class="is-size-5">#}
-{#                            ระบบซ่อมบำรุงและครุภัณฑ์ (Intranet only)#}
-{#                        </span>#}
-{#                        </a>#}
-                        <a href="{{ url_for('smartclass_scheduler.index') }}" class="panel-block">
-                        <span class="panel-icon">
-                            <i class="far fa-calendar-alt"></i>
-                        </span>
-                            <span class="is-size-5">
-                            ระบบลงทะเบียนใช้งาน Smart Classroom/ Online Learning <br> (Zoom, Swival, Kahoot)
-                        </span>
-                        </a>
-                        <a href="{{ url_for('procurement.main_procurement_page') }}" class="panel-block">
-                            <span class="panel-icon">
-                               <i class="fas fa-cog"></i>
-                            </span>
-                            <span class="is-size-5">ระบบงานคลังและพัสดุ</span>
-                        </a>
-                        <a href="{{ url_for('comp_tracker.index') }}" class="panel-block">
-                            <span class="panel-icon">
-                                <i class="fas fa-clipboard-list"></i>
-                            </span>
-                            <span class="is-size-5">ระบบรับแจ้งและติดตามข้อร้องเรียนและปัญหา</span>
-                        </a>
-                    </nav>
-                    <nav class="panel is-info">
-                        <p class="panel-heading">Analytics</p>
-                        <a class="panel-block"
-                            href="{{ url_for('data_bp.orgs') }}">
-                        <span class="panel-icon">
-                            <i class="fas fa-tasks"></i>
-                        </span>
+                    <a href="{{ url_for('research.dashboard') }}" class="panel-block">
+                    <span class="panel-icon">
+                        <i class="fas fa-tachometer-alt"></i>
+                    </span>
                         <span class="is-size-5">
-                            ระบบฐานข้อมูลตัวชี้วัดและกระบวนการการทำงาน
-                        </span>
-                        </a>
-                        <a href="{{ url_for('research.dashboard') }}" class="panel-block">
-                        <span class="panel-icon">
-                            <i class="fas fa-tachometer-alt"></i>
-                        </span>
-                            <span class="is-size-5">
-                            ระบบวิเคราะห์ผลงานวิจัย
-                        </span>
-                        </a>
+                        ระบบวิเคราะห์ผลงานวิจัย
+                    </span>
+                    </a>
 {#                        <a href="{{ url_for('kpi_blueprint.main') }}" class="panel-block">#}
 {#                        <span class="panel-icon">#}
 {#                            <i class="fas fa-tachometer-alt"></i>#}
@@ -453,23 +384,23 @@
 {#                            ระบบฐานข้อมูลตัวชี้วัดองค์กร#}
 {#                        </span>#}
 {#                        </a>#}
-                        <a href="{{ url_for('kpi_blueprint.dashboard_index') }}"
-                           class="panel-block">
-                        <span class="panel-icon">
-                            <i class="fas fa-tachometer-alt"></i>
-                        </span>
-                            <span class="is-size-5">
-                            Dashboard รายงานข้อมูลเพื่อการตัดสินใจ
-                        </span>
-                        </a>
-                        <a href="{{ url_for('chemdb.index') }}" class="panel-block">
-                        <span class="panel-icon">
-                            <i class="fas fa-flask"></i>
-                        </span>
-                            <span class="is-size-5">
-                            ระบบฐานข้อมูลสารเคมี
-                        </span>
-                        </a>
+                    <a href="{{ url_for('kpi_blueprint.dashboard_index') }}"
+                       class="panel-block">
+                    <span class="panel-icon">
+                        <i class="fas fa-tachometer-alt"></i>
+                    </span>
+                        <span class="is-size-5">
+                        Dashboard รายงานข้อมูลเพื่อการตัดสินใจ
+                    </span>
+                    </a>
+                    <a href="{{ url_for('chemdb.index') }}" class="panel-block">
+                    <span class="panel-icon">
+                        <i class="fas fa-flask"></i>
+                    </span>
+                        <span class="is-size-5">
+                        ระบบฐานข้อมูลสารเคมี
+                    </span>
+                    </a>
 {#                        <a href="{{ url_for('food.index') }}" class="panel-block">#}
 {#                        <span class="panel-icon">#}
 {#                            <i class="fab fa-pagelines"></i>#}
@@ -478,45 +409,38 @@
 {#                            ฐานข้อมูลโครงการเกษตรและอาหารปลอดภัย#}
 {#                        </span>#}
 {#                        </a>#}
-                    </nav>
-                    <nav class="panel is-info">
-                        <p class="panel-heading">ระบบมหาวิทยาลัย</p>
-                        <a href="https://eoffice.mahidol.ac.th/" class="panel-block">
-                            <span class="panel-icon">
-                                <i class="fa fa-circle-notch"></i>
-                            </span>
-                            <span class="is-size-5">สารบรรณอิเล็กทรอนิกส์ (eoffice)</span>
-                        </a>
-                    </nav>
-                    <nav class="panel is-info">
-                        <p class="panel-heading">Education</p>
-{#                        <a href="{{ url_for('studs.index') }}" class="panel-block">#}
-{#                        <span class="panel-icon">#}
-{#                            <i class="fas fa-user-graduate"></i>#}
-{#                        </span><span class="is-size-5">นักศึกษา</span>#}
-{#                        </a>#}
-                        <a href="{{ url_for('eduqa.index') }}" class="panel-block">
+                </nav>
+                <nav class="panel is-info">
+                    <p class="panel-heading">ระบบมหาวิทยาลัย</p>
+                    <a href="https://eoffice.mahidol.ac.th/" class="panel-block">
                         <span class="panel-icon">
-                            <i class="fas fa-university"></i>
-                        </span><span class="is-size-5">ระบบประกันคุณภาพการศึกษา</span>
-                        </a>
-                    </nav>
-                    <nav class="panel is-danger">
-                        <p class="panel-heading">Services (กำลังพัฒนาและทดลอง)</p>
-                        <a {% if central_admin %}
-                                href="{{ url_for('service_admin.invoice_index_for_central_admin', menu='invoice', tab='all') }}"
-                           {% elif assistant %}
-                                href="{{ url_for('service_admin.quotation_index', menu='quotation', tab='all') }}"
-                           {% else %}
-                                href="{{ url_for('service_admin.request_index', menu='request') }}"
-                           {% endif %}
-                           class="panel-block">
-                            <span class="panel-icon">
-                                <i class="fa fa-exclamation-triangle has-text-warning"></i>
-                            </span>
-                            <span class="is-size-5">ระบบงานบริการวิชาการ</span>
-                        </a>
-                        <a href="{{ url_for('meeting_planner.index') }}" class="panel-block">
+                            <i class="fa fa-circle-notch"></i>
+                        </span>
+                        <span class="is-size-5">สารบรรณอิเล็กทรอนิกส์ (eoffice)</span>
+                    </a>
+                </nav>
+                <nav class="panel is-danger">
+                    <p class="panel-heading">Services (กำลังพัฒนาและทดลอง)</p>
+                    <a {% if central_admin %}
+                            href="{{ url_for('service_admin.invoice_index_for_central_admin', menu='invoice', tab='all') }}"
+                       {% elif assistant %}
+                            href="{{ url_for('service_admin.quotation_index', menu='quotation', tab='all') }}"
+                       {% else %}
+                            href="{{ url_for('service_admin.request_index', menu='request') }}"
+                       {% endif %}
+                       class="panel-block">
+                        <span class="panel-icon">
+                            <i class="fa fa-exclamation-triangle has-text-warning"></i>
+                        </span>
+                        <span class="is-size-5">ระบบงานบริการวิชาการ</span>
+                    </a>
+                    <a href="{{ url_for('continuing_edu_admin.dashboard') }}" class="panel-block">
+                        <span class="panel-icon">
+                            <i class="fa fa-exclamation-triangle has-text-warning"></i>
+                        </span>
+                        <span class="is-size-5">จัดการคอร์สอบรม</span>
+                    </a>
+                    <a href="{{ url_for('meeting_planner.index') }}" class="panel-block">
                         <span class="panel-icon">
                             <i class="fa fa-exclamation-triangle has-text-warning"></i>
                         </span>
@@ -621,24 +545,6 @@
                 <nav class="panel is-light">
                     <p class="panel-heading">Administrator</p>
                     <a href="{{ url_for('comp_tracker.admin_index', tab='new') }}" class="panel-block">
-                            <span class="is-size-5">ระบบจัดการข้อมูลส่วนบุคคล</span>
-                        </a>
-                        <a href="{{ url_for('software_request.index') }}" class="panel-block">
-                            <span class="panel-icon">
-                                <i class="fa fa-exclamation-triangle has-text-warning"></i>
-                            </span>
-                            <span class="is-size-5">ระบบขอรับบริการพัฒนา Software</span>
-                        </a>
-{#                        <a href="{{ url_for('service_admin.add_meeting') }}"  class="panel-block">#}
-{#                            <span class="panel-icon">#}
-{#                                <i class="fa fa-exclamation-triangle has-text-warning"></i>#}
-{#                            </span>#}
-{#                            <span class="is-size-5">ระบบนัดหมายประชุมกรรมการพัสดุ</span>#}
-{#                        </a>#}
-                    </nav>
-                    <nav class="panel is-light">
-                        <p class="panel-heading">Administrator</p>
-                        <a href="{{ url_for('comp_tracker.admin_index', tab='new') }}" class="panel-block">
                         <span class="panel-icon">
                             <i class="fas fa-user-clock"></i>
                         </span>
