Added scrollX in datatable of quotation_index template of service_admin templates

--- a/app/templates/service_admin/quotation_index.html
+++ b/app/templates/service_admin/quotation_index.html
@@ -159,6 +159,7 @@
                     url: {{ url_for('service_admin.quotation_index', tab=tab, api='true')|tojson|safe}},
                 },
                 order: [[1, 'desc']],
+                scrollX: true,
                 columns: [
                     {data: 'quotation_no'},
                     {
