--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -528,6 +528,12 @@
                             </span>
                             <sapn class="is-size-5">ระบบขอรับบริการพัฒนา Software</sapn>
                         </a>
+                        <a href="{{ url_for('address.index') }}" class="panel-block">
+                            <span class="panel-icon">
+                                <i class="fas fa-user-clock"></i>
+                            </span>
+                            <span class="is-size-5">ระบบจัดการข้อมูลเขตการปกครอง และรหัสไปรษณีย์</span>
+                        </a>
                         <a href="{{ url_for('staff.login_scan') }}" class="panel-block">
                         <span class="panel-icon">
                             <i class="fas fa-user-clock"></i>
