--- a/app/templates/address/index.html
+++ b/app/templates/address/index.html
@@ -11,10 +11,28 @@
                         <a class="panel-block"
                            href="{{ url_for('address.upload_province') }}">
                             <span class="panel-icon">
-                                <i class="fa-solid fa-users"></i>
+                                <i class="fas fa-map-marker-alt"></i>
                             </span>
                             <span class="is-size-5">
                                 จังหวัด
+                            </span>
+                        </a>
+                        <a class="panel-block"
+                           href="{{ url_for('address.upload_district') }}">
+                            <span class="panel-icon">
+                                <i class="fas fa-map-marker-alt"></i>
+                            </span>
+                            <span class="is-size-5">
+                                อำเภอ
+                            </span>
+                        </a>
+                        <a class="panel-block"
+                           href="{{ url_for('address.upload_subdistrict') }}">
+                            <span class="panel-icon">
+                                <i class="fas fa-map-marker-alt"></i>
+                            </span>
+                            <span class="is-size-5">
+                                ตำบล
                             </span>
                         </a>
                     </nav>
