Edited name url in index file

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -532,7 +532,7 @@
                             <span class="panel-icon">
                                 <i class="fas fa-user-clock"></i>
                             </span>
-                            <span class="is-size-5">ระบบจัดการข้อมูลเขตการปกครอง และรหัสไปรษณีย์</span>
+                            <span class="is-size-5">ระบบจัดการข้อมูลเขตการปกครอง</span>
                         </a>
                         <a href="{{ url_for('staff.login_scan') }}" class="panel-block">
                         <span class="panel-icon">
