Added title in upload_district template, upload_province template and upload_subdistrict template of address templates

--- a/app/templates/address/upload_district.html
+++ b/app/templates/address/upload_district.html
@@ -3,9 +3,10 @@
     {% include "nav.html" %}
     <section class="section">
         {% include "messages.html" %}
+        <h1 class="title has-text-centered">District</h1>
         <article class="message is-info">
             <div class="message-header">
-                Upload Province
+                Upload District
             </div>
             <div class="message-body">
                 <p>
@@ -33,7 +34,7 @@
     <section class="section" id="app">
         <div class="container">
             <div class="columns">
-                <div class="column box is-one-third has-text-right is-offset-4">
+                <div class="column box is-one-third is-offset-4">
                     <form method="post" enctype="multipart/form-data">
                         <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
                         <div class="field">
@@ -53,7 +54,14 @@
                                 </label>
                             </div>
                         </div>
-                        <input type="submit" id="submit-form" class="button is-success" value="บันทึก">
+                        <div class=" field">
+                            <div class="buttons is-centered">
+                                <a class="button" href="{{ url_for('address.index') }}">
+                                    ย้อนกลับ
+                                </a>
+                                <input type="submit" id="submit-form" class="button is-success" value="บันทึก">
+                            </div>
+                        </div>
                     </form>
                 </div>
             </div>
