edited seminar_each_record template

--- a/app/templates/staff/seminar_each_record.html
+++ b/app/templates/staff/seminar_each_record.html
@@ -119,7 +119,7 @@
                             </td>
                         </tr>
                         {% endif %}
-                        {% if attend.budget_type %}
+                        {% if attend.budget %}
                         <tr>
                             <td>
                                <label class="label">ค่าใช้จ่าย</label>
