--- a/app/templates/academic_services/sample_index.html
+++ b/app/templates/academic_services/sample_index.html
@@ -198,14 +198,14 @@
                                         <div id="create_sample_appointment"></div>
                                         <div class="field has-addons">
                                             <div class="control">
-                                                <a {% if sample.location %}
+                                                <a {% if sample.ship_type %}
                                                     class="button is-small is-warning is-outlined is-rounded"
                                                 {% else %}
                                                     class="button is-small is-info is-outlined is-rounded"
                                                 {% endif %}
                                                     href="{{ url_for('academic_services.create_sample_appointment',
                                                                sample_id=sample.id, menu=menu, tab=tab) }}">
-                                                    {% if sample.location %}
+                                                    {% if sample.ship_type %}
                                                         <span class="icon"><i class="fas fa-pen"></i></span>
                                                         <span>แก้ไขการนัดหมาย</span>
                                                     {% else %}
