Added span * in edit_result_modal template of academic_services templates

--- a/app/templates/academic_services/modal/edit_result_modal.html
+++ b/app/templates/academic_services/modal/edit_result_modal.html
@@ -13,7 +13,10 @@
                 >
                 <input type="hidden" value="{{ csrf_token() }}" name="csrf_token">
                     <div class="field">
-                        <label class="label">รายละเอียด</label>
+                        <label class="label">
+                            รายละเอียด
+                            <span class="has-text-danger">*</span>
+                        </label>
                         <div class="control">
                             {{ form.note(class='textarea') }}
                         </div>
