--- a/app/templates/academic_services/reset_password.html
+++ b/app/templates/academic_services/reset_password.html
@@ -11,7 +11,11 @@
                     <form action="" method="post">
                         <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
                         <div class="field">
-                            <label class="label">รหัสผ่านใหม่</label>
+                            <label class="label">
+                                รหัสผ่านใหม่
+                                <i class="fas fa-info-circle ml-2 is-size-7 has-text-info"></i>
+                                <span class="is-size-7 ml-1 has-text-info">รหัสผ่านควรมีอย่างน้อย 8 ตัวอักษร</span>
+                            </label>
                             <div class="control has-icons-left is-expanded">
                                 {{ form.new_password(class='input', placeholder="New password") }}
                                 <span class="icon is-small is-left">
