edited text by hr request

--- a/app/templates/staff/seminar_attend_info_for_hr.html
+++ b/app/templates/staff/seminar_attend_info_for_hr.html
@@ -19,7 +19,7 @@
                                 <span class="icon">
                                     <i class="fas fa-info-circle"></i>
                                 </span>
-                                <span>หน้าบุคลากรทั่วไป</span>
+                                <span>จัดทำบันทึกขออนุมัติ</span>
                             </a>
                         </div>
                         <div class="column has-text-centered">
