Edited removeProductTypeOptions function in bacteria_request_form template, virus_air_disinfection_request_form template and virus_disinfection_request_form template of academic_services and service_admin templates

--- a/app/templates/academic_services/forms/bacteria_request_form.html
+++ b/app/templates/academic_services/forms/bacteria_request_form.html
@@ -338,7 +338,7 @@
                 const option = productType.options[i];
                 if (option.value === '') continue;
                 subforms.forEach(subform => {
-                    const subformId = subform.id.split(/[\s_]+/)[0];
+                    const subformId = subform.id.replace('_condition_field', '');
                     if (option.value === subformId) {
                         option.remove();
                     }
@@ -355,21 +355,20 @@
             }
         });
 
-        document.addEventListener('DOMContentLoaded', () => {
-            const productType = document.getElementById('product_type');
-            const subforms = document.querySelectorAll('.subform-card');
-            for (let i = productType.options.length - 1; i >= 0; i--) {
-                const option = productType.options[i];
-                if (option.value === '') continue;
-                subforms.forEach(subform => {
-                    const subformId = subform.id.split(/[\s_]+/)[0];
-                    if (option.value === subformId) {
-                        option.remove();
-                    }
-                });
-            }
-            productType.selectedIndex = 0;
-        });
+        {#document.addEventListener('DOMContentLoaded', () => {#}
+        {#    const productType = document.getElementById('product_type');#}
+        {#    const subforms = document.querySelectorAll('.subform-card');#}
+        {#    for (let i = productType.options.length - 1; i >= 0; i--) {#}
+        {#        const option = productType.options[i];#}
+        {#        if (option.value === '') continue;#}
+        {#        subforms.forEach(subform => {#}
+        {#            const subformId = subform.id.split(/[\s_]+/)[0];#}
+        {#            if (option.value === subformId) {#}
+        {#                option.remove();#}
+        {#            }#}
+        {#        });#}
+        {#    }#}
+        {#    productType.selectedIndex = 0;#}
     </script>
     <script>
         document.addEventListener('click', function (e) {
