--- a/app/templates/service_admin/forms/bacteria_request_form.html
+++ b/app/templates/service_admin/forms/bacteria_request_form.html
@@ -335,7 +335,7 @@
                 const option = productType.options[i];
                 if (option.value === '') continue;
                 subforms.forEach(subform => {
-                    const subformId = subform.id.split(/[\s_]+/)[0];
+                    const subformId = subform.id.replace('_condition_field', '');
                     if (option.value === subformId) {
                         option.remove();
                     }
@@ -350,22 +350,6 @@
             if (evt.target.id === 'condition-fields') {
                 removeProductTypeOptions();
             }
-        });
-
-        document.addEventListener('DOMContentLoaded', () => {
-            const productType = document.getElementById('product_type');
-            const subforms = document.querySelectorAll('.subform-card');
-            for (let i = productType.options.length - 1; i >= 0; i--) {
-                const option = productType.options[i];
-                if (option.value === '') continue;
-                subforms.forEach(subform => {
-                    const subformId = subform.id.split(/[\s_]+/)[0];
-                    if (option.value === subformId) {
-                        option.remove();
-                    }
-                });
-            }
-            productType.selectedIndex = 0;
         });
     </script>
     <script>
